--- a/About.html
+++ b/About.html
@@ -41,7 +41,15 @@
                     <img src="media/5-1966 YILI İLK DERS.jpg">
                 </div>
             </div>
-            
+
+     <section class="history-content">
+                <div class="row">
+                   <div class="history-left">
+                    <iframe width="1000" height="600" src="https://www.youtube.com/embed/DmHkbBoEhFg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+</section>
+
+        
             </section>
             <section class="history-content">
                 <div class="row">
