--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <div class="facilities-col">
             <img src="media/konferans.JPG">
-                <h3>Our Conferance Hall</h3>
+                <h3>Our Conference Hall</h3>
                 <p>Our thoughtfully designed venue provides a dynamic space for educational events and gatherings. Equipped with modern technology and comfortable seating, our conference hall is perfect for hosting academic conferences, workshops, and seminars. Embrace the opportunity to engage and connect with fellow educators, students, and speakers in a vibrant atmosphere that fosters collaboration and growth. Step into a space that encourages innovation and learning, and let our conference hall be the catalyst for transformative educational experiences.</p>
 
         </div>
